Fix the autotool-based build

--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
 AC_INIT([gcfuse], [0.9.1], [mike@multimedia.cx])
-AM_INIT_AUTOMAKE([gcfuse], [0.9.1])
+AM_INIT_AUTOMAKE([1.11 foreign])
 AC_CONFIG_HEADER([src/config.h])
 
 AC_PROG_CC
@@ -7,14 +7,7 @@ AC_PROG_CC
 CPPFLAGS="$CPPFLAGS -Wall `getconf LFS_CFLAGS`"
 LDFLAGS="$LDFLAGS `getconf LFS_LDFLAGS`"
 
-AC_CHECK_LIB([fuse], [fuse_main], , AC_MSG_ERROR([Unable to find libfuse]))
-
-AC_HEADER_STDC
-AC_CHECK_HEADER([fuse/fuse.h], , AC_MSG_ERROR([Unable to find fuse.h]))
-AC_PREPROC_IFELSE(
-[#define FUSE_USE_VERSION 25
-#include <fuse.h>]
-, , AC_MSG_ERROR([You need FUSE version 2.5.x]))
+PKG_CHECK_MODULES([FUSE], [fuse >= 2.5])
 
 AC_C_CONST
 
